# VLCB-Arduino

./: .gitignore  CMakeLists.txt  README.md  build-pico.sh
.github/workflows/: cmake-matrix.yml
cmake/: arduino_core.cmake  arduino_flags.cmake  arduino_libs.cmake
cmake/toolchain/: avr.toolchain.cmake  rp2040.cmake  rp2040.toolchain.cmake
examples/VLCB_1in1out/: VLCB_1in1out.ino
examples/VLCB_4in4out/: VLCB_4in4out.ino
examples/VLCB_empty/: VLCB_empty.ino
examples/VLCB_long_message_example/: VLCB_long_message_example.ino
src/: CMakeLists.txt  Controller.cpp  Controller.h
